--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 									</a>
 								</div>
 								<div>
-								<a href="projects.html#six">
+								<a href="projects.html#nine">
 										<img src="images/thumbs/hiveplot.png" alt="" />
 										<h3>Networks Paper (from SIMR, current!)</h3>
 									</a>
