--- a/about.html
+++ b/about.html
@@ -9,11 +9,10 @@
 		<title>Projects</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets2/css/main.css" />
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async></script>
 	</head>
-	<body>
-
+<body>
 
 
 		<!-- Main -->
