--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<ul class="icons">
 							<li><a href="about.html" class=><span class="label">About</span></a></li>
 							<li><a href="images/resume.pdf" class=""><span class="label">Resume</span></a></li>
-							<li><a href="https://github.com/bg49623" class=""><span class="label">Github</span></a></li>
+							<li><a href="https://www.linkedin.com/in/brandon-guo-263528188/" class=""><span class="label">LinkedIn</span></a></li>
 						</ul>
 					</header>
 
