--- a/tutoring.html
+++ b/tutoring.html
@@ -23,7 +23,7 @@
 								<header class="major">
 									<h2>Tutoring</h2>
 									<br>
-									<h3> <u><a href='Resume.pdf'>To My Site (Main Page)</a></u> </h3>
+									<h3> <u><a href='index.html'>To My Site (Main Page)</a></u> </h3>
 									<br>
 
 									
