--- a/tutoring.html
+++ b/tutoring.html
@@ -23,7 +23,8 @@
 								<header class="major">
 									<h2>Tutoring</h2>
 									<br>
-									<h4> <u><a href='index.html'>To My Site (Main Page)</a></u> </h4>
+									<button onclick = "window.open('index.html', '_blank');"
+    													> To My Site (Main Page)</button>
 								</header>
 							</div>
 							<div class>
@@ -54,6 +55,10 @@
   													<br>
 
 <iframe src="https://calendar.google.com/calendar/embed?src=d7b91en2qmcklk6ukms8i2a1m4%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+													<p>
+  													<br>
+  													Note that this is only the calendar for the free sessions at Monta Vista (a separate project). Please contact me for my schedule regarding private tutoring.
+   													</p>
 
 
 													
